# display-table

./: COPYING  LICENSE  README.md  meson.build  org.example.App.json
data/: org.example.App.desktop.in  org.example.App.gschema.xml
po/: meson.build
src/: application.vala  iris-2.arff  iris.arff  main.vala  meson.build  style.css  window.ui  window.vala
src/Models/: any.vala  content.vala  document.vala  metadata.vala  type.vala
src/Utils/: error.vala  ioutil.vala  util.vala
src/Widgets/: TableWidget.vala
